picom: rounded borders!
had to use a different fork (picom-rounded-corners)

had to revert to box blur method, its not too terrible

--- a/.config/picom.conf
+++ b/.config/picom.conf
@@ -19,8 +19,10 @@ blur-background-exclude = [
 backend = "glx";
 
 blur-background = true;
-blur-method = "dual_kawase";
+# blur-method = "dual_kawase";
+blur-method = "box";
 blur-strength = 5;
+blur-size = 20;
 
 fading = true;
 fade-delta = 5.0;
@@ -39,3 +41,5 @@ wintypes:
 {
   full-shadow = true;
 };
+
+corner-radius = 9;
