polybar: music module: use playerctl, dynamically get network interface

--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -23,7 +23,7 @@ modules-right = backlight network audio battery
 inherit = section/bar-base
 bottom = true
 ; tray-position = right
-modules-right = spotify
+modules-right = music
 modules-left = consumption stamina
 
 [module/temp]
@@ -31,10 +31,11 @@ type = internal/temperature
 interval = 5
 label = %temperature-c%
 
-[module/spotify]
+[module/music]
 type = custom/script
-interval = 10
-exec = spt pb -f "%f %a: %t" 
+interval = 2
+exec-if = playerctl status
+exec = echo $(playerctl metadata artist): $(playerctl metadata title)
 format = <label>
 click-left = playerctl play-pause
 
@@ -135,7 +136,7 @@ label-full =
 
 [module/network]
 type = internal/network
-interface = wl0
+interface = ${env:ADAPTATER:wl0}
 
 format-connected = %{A1:kitty nmtui-connect:}%{F$colors.sec}net%{F-} <label-connected>%{A}
 format-disconnected = %{A1:kitty nmtui-connect:}%{F$colors.sec}net%{F-} off%{A}
