use spt and a libspotify hook for efficient and not buggy music status. use a nerdfonts-compatible font.

--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -7,7 +7,7 @@ monitor = ${env:MONITOR:}
 background = #00000000
 foreground = ${colors.prim}
 font-1 = unifont:fontformat=truetype:antialias=false:size=13;0
-font-0 = CozetteVector;1
+font-0 = Fira Code Nerd Font;1
 height=50
 padding = 2
 module-margin = 2
@@ -23,7 +23,7 @@ modules-right = backlight network audio battery
 inherit = section/bar-base
 bottom = true
 ; tray-position = right
-modules-right = music
+modules-right = spotify
 modules-left = consumption stamina
 
 [module/temp]
@@ -31,11 +31,11 @@ type = internal/temperature
 interval = 5
 label = %temperature-c%
 
-[module/music]
+[module/spotify]
 type = custom/script
 interval = 2
 exec-if = playerctl status
-exec = echo $(playerctl metadata artist): $(playerctl metadata title)
+exec = cat $HOME/.cache/currently_playing.txt
 format = <label>
 click-left = playerctl play-pause
 
