polybar: use [%icon%] for active workspace because underlining doesn't work

--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -87,10 +87,10 @@ ws-icon-9  = 10;jū
 ; ws-icon-9  = 10;十
 ; ws-icon-default = 〇
 
-label-visible = "%icon%  "
-label-focused = "%{u$colors.sec}%{+u}%icon%  %{u-}"
-label-unfocused = "%icon%  "
-label-urgent = "%icon%  "
+label-visible = " %icon%  "
+label-focused = "[%icon%] "
+label-unfocused = " %icon%  "
+label-urgent = " %icon%  "
 
 [module/date]
 type = internal/date
