change default browser to qute

--- a/.config/i3/config
+++ b/.config/i3/config
@@ -43,7 +43,7 @@ floating_modifier $mod
 # start a terminal
 bindsym $mod+Return exec kitty
 # start a browser
-bindsym $mod+b exec brave
+bindsym $mod+b exec qutebrowser
 # start the IDE
 bindsym $mod+c exec code-insiders
 
