--- a/.config/picom.conf
+++ b/.config/picom.conf
@@ -6,6 +6,7 @@ opacity-rule = [
   "85:class_g = 'Spotify'",
   "90:class_g = 'firefox'",
   "85:class_g = 'Brave-browser'",
+  "85:class_g = 'qutebrowser'",
   "85:class_g = 'Zathura'",
   "85:class_g = 'GitKraken'",
   "100:class_g = 'Polybar'",
