polybar: renamed workspaces, change modules order on top right

--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -16,6 +16,7 @@ module-margin = 2
 inherit = section/bar-base
 modules-left = date
 modules-center = i3
+modules-right = network audio backlight battery
 ; tray-position = left
 
 [bar/bottom]
@@ -64,16 +65,16 @@ type = internal/memory
 type = internal/i3
 format = <label-state>
 
-ws-icon-0  = 1;ichi
-ws-icon-1  = 2;ni
-ws-icon-2  = 3;san
-ws-icon-3  = 4;spotify
-ws-icon-4  = 5;discord
-ws-icon-5  = 6;roku
-ws-icon-6  = 7;nana
-ws-icon-7  = 8;hachi
-ws-icon-8  = 9;kyū
-ws-icon-9  = 10;jū
+ws-icon-0  = 1;main
+ws-icon-1  = 2;brws
+ws-icon-2  = 3;code
+ws-icon-3  = 4;term
+ws-icon-4  = 5;phys
+ws-icon-5  = 6;math
+ws-icon-6  = 7;conf
+ws-icon-7  = 8;othr
+ws-icon-8  = 9;spot
+ws-icon-9  = 10;disc
 ; ws-icon-0  = 1;一
 ; ws-icon-1  = 2;二
 ; ws-icon-2  = 3;三
