--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -72,7 +72,7 @@ ws-icon-3  = 4;term
 ws-icon-4  = 5;phys
 ws-icon-5  = 6;math
 ws-icon-6  = 7;conf
-ws-icon-7  = 8;othr
+ws-icon-7  = 8;mail
 ws-icon-8  = 9;spot
 ws-icon-9  = 10;disc
 ; ws-icon-0  = 1;一
