--- a/.config/i3/config
+++ b/.config/i3/config
@@ -214,10 +214,9 @@ exec xinput set-prop "ELAN1400:00 04F3:30AD Touchpad" "libinput Natural Scrollin
 exec setxkbmap -option compose:rctrl
 
 # Assign windows to workspaces
-for_window [class="Spotify"] move to workspace $ws4
-for_window [class="brave-browser"] move to workspace $ws2
-assign [class="discord"] $ws5
-assign [class="code-oss"] $ws1
+assign [class="discord"] $ws10
+assign [class="code - insiders"] $ws3
+assign [class="spotify-tui"] $ws9
 
 # Make windows floating
 for_window [class="copyq"] floating enable
