--- a/.config/i3/config
+++ b/.config/i3/config
@@ -121,7 +121,7 @@ bindsym $mod+a focus parent
 #bindsym ?? focus child
 
 # take screenhots
-bindsym --release Shift+Print exec scrot --select -e 'mv $f ~/screenshots'
+bindsym --release Shift+Print exec scrot --select --freeze -e 'mv $f ~/screenshots'
 bindsym --release Print exec scrot -e 'mv $f ~/screenshots'
 
 # workspace_auto_back_and_forth true
