polybar: add fallback with playerctl for spotify status

--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -35,7 +35,7 @@ label = %temperature-c%
 type = custom/script
 interval = 2
 exec-if = playerctl status
-exec = cat $HOME/.cache/currently_playing.txt
+exec = cat $HOME/.cache/currently_playing.txt || echo $(playerctl metadata xesam:artist): $(playerctl metadata xesam:title)
 format = <label>
 click-left = playerctl play-pause
 
