polybar: click on spotify: refresh status when not playing on device
seems like spotifyd's on_song_change_hook does not trigger when the device is not this one (ie on laptop when set to output on desktop)

this enables us to refresh the status on-demand when playing remotely

--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -37,7 +37,7 @@ interval = 2
 exec-if = playerctl status
 exec = cat $HOME/.cache/currently_playing.txt || echo $(playerctl metadata xesam:artist): $(playerctl metadata xesam:title)
 format = <label>
-click-left = playerctl play-pause
+click-left = spotifyd
 
 [module/play-prev]
 type = custom/script
