polybar: fix network info not showing

--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -136,7 +136,7 @@ label-full =
 
 [module/network]
 type = internal/network
-interface = ${env:ADAPTATER:wl0}
+interface = ${env:INTERFACE:wl0}
 
 format-connected = %{A1:kitty nmtui-connect:}%{F$colors.sec}net%{F-} <label-connected>%{A}
 format-disconnected = %{A1:kitty nmtui-connect:}%{F$colors.sec}net%{F-} off%{A}
