polybar: handle differences in configuration between hosts

--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -6,9 +6,9 @@ sec = #000000
 monitor = ${env:MONITOR:}
 background = #00000000
 foreground = ${colors.prim}
-font-1 = unifont:fontformat=truetype:antialias=false:size=13;0
-font-0 = Fira Code Nerd Font;1
-height=50
+font-1=${env:FONT_1:}
+font-0=${env:FONT_0:}
+height=${env:BAR_HEIGHT:}
 padding = 2
 module-margin = 2
 
