--- a/.config/i3/config
+++ b/.config/i3/config
@@ -266,6 +266,7 @@ bindsym XF86AudioPlay exec test `playerctl --player=spotifyd status` = "Playing"
 
 bindsym $mod+ctrl+Up exec spt pb --like
 bindsym $mod+ctrl+Down exec spt pb --shuffle
+bindsym $mod+ctrl+Prior exec rofi-spotify -a
 # bindsym $mod+ctrl+Next exec Todo: Next & Prior keys: seek in track
 
 # Launch rofi file browser
