--- a/.config/i3/config
+++ b/.config/i3/config
@@ -266,8 +266,8 @@ bindsym XF86AudioPlay exec test `playerctl --player=spotifyd status` = "Playing"
 
 bindsym $mod+ctrl+Up exec spt pb --like
 bindsym $mod+ctrl+Down exec spt pb --shuffle
-bindsym $mod+ctrl+Prior exec rofi-spotify -a
-bindsym $mod+ctrl+Insert exec rofi-spotify -st
+bindsym $mod+ctrl+Insert exec rofi-spotify -a
+bindsym $mod+ctrl+Prior exec rofi-spotify -st
 # bindsym $mod+ctrl+Next exec Todo: Next & Prior keys: seek in track
 
 # Launch rofi file browser
