picom: fix ugly blending in tabbed mode

--- a/.config/picom.conf
+++ b/.config/picom.conf
@@ -18,6 +18,8 @@ blur-background-exclude = [
 
 backend = "glx";
 
+transparent-clipping = true;
+
 blur-background = true;
 # blur-method = "dual_kawase";
 blur-method = "box";
