polybar: adapt color to color scheme
and get rid of color.sec, the syntax was wrong anyway

--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -1,11 +1,7 @@
-[colors]
-prim = #FFF
-sec = #000000
-
 [section/bar-base]
 monitor = ${env:MONITOR:}
 background = #00000000
-foreground = ${colors.prim}
+foreground = ${env:COLOR_PRIM:#FFF}
 font-1=${env:FONT_1:}
 font-0=${env:FONT_0:}
 height=${env:BAR_HEIGHT:}
@@ -95,7 +91,7 @@ label-urgent = " %icon%  "
 [module/date]
 type = internal/date
 date = %H:%M
-date-alt = %Y-%m-%d%{F$colors.sec}T%{F-}%H:%M:%S
+date-alt = %Y-%m-%dT%H:%M:%S
 
 [module/title]
 type = internal/xwindow
@@ -119,7 +115,7 @@ battery = BAT0
 adapter = AC0
 
 format-charging = 
-format-discharging = %{F$colors.sec}consuming%{F-} <label-discharging>
+format-discharging = consuming <label-discharging>
 label-discharging = %consumption% W
 label-full = 
 
@@ -130,7 +126,7 @@ battery = BAT0
 adapter = AC0
 
 format-charging = 
-format-discharging = <label-discharging> %{F$colors.sec}'til shutdown%{F-}
+format-discharging = <label-discharging> 'til shutdown
 label-discharging = %time%
 label-full = 
 
@@ -138,15 +134,15 @@ label-full =
 type = internal/network
 interface = ${env:INTERFACE:wl0}
 
-format-connected = %{A1:kitty nmtui-connect:}%{F$colors.sec}net%{F-} <label-connected>%{A}
-format-disconnected = %{A1:kitty nmtui-connect:}%{F$colors.sec}net%{F-} off%{A}
+format-connected = %{A1:kitty nmtui-connect:}net <label-connected>%{A}
+format-disconnected = %{A1:kitty nmtui-connect:}net off%{A}
 label-connected = %downspeed%
 
 [module/audio]
 type = internal/pulseaudio
 
-format-volume = %{F$colors.sec}snd%{F-} <label-volume>
-format-muted = %{F$colors.sec}snd%{F-} off
+format-volume = snd <label-volume>
+format-muted = snd off
 
 interval = 5
 
@@ -176,10 +172,10 @@ ramp-volume-20 =  20
 
 [module/keyboard]
 type = internal/xkeyboard
-label-layout = %{F$colors.sec}kbd%{F-} %layout%
+label-layout = kbd %layout%
 
 [module/backlight]
 type = internal/backlight
 card = intel_backlight
 enable-scroll = false
-label = %{F$colors.sec}lum%{F-} %percentage%
+label = lum %percentage%
