polybar: use playerctl's --format

--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -31,7 +31,7 @@ label = %temperature-c%
 type = custom/script
 interval = 2
 exec-if = playerctl status
-exec = cat $HOME/.cache/currently_playing.txt || echo $(playerctl metadata xesam:artist): $(playerctl metadata xesam:title)
+exec = test -f $HOME/.cache/currently_playing.txt && cat $HOME/.cache/currently_playing.txt || playerctl -f '{{artist}}: {{title}}' metadata
 format = <label>
 click-left = spotifyd
 
