--- a/.config/i3/config
+++ b/.config/i3/config
@@ -281,9 +281,4 @@ bindsym $mod+Shift+ugrave exec CM_LAUNCHER=rofi clipmenu
 
 
 # Startup applications
-exec --no-startup-id i3-msg 'workspace 2; exec kitty qutebrowser'
-exec --no-startup-id i3-msg 'workspace 7; exec kitty -d $HOME/.dotfiles; exec kitty -d $HOME/.dotfiles fish -c lazygit'
-exec --no-startup-id i3-msg 'workspace 8; layout tabbed; exec qutebrowser mail.ewen.works mail.google.com'
-exec --no-startup-id i3-msg 'workspace 9; exec spotifyd; exec qutebrowser open.spotify.com'
-exec --no-startup-id i3-msg 'workspace 10; layout tabbed; exec kitty fish -c tiny; exec kitty fish -c gomuks; exec discord'
-exec --no-startup-id i3-msg 'workspace 1'
+exec --no-startup-id i3-msg 'workspace 2; exec kitty qutebrowser; workspace 7; exec kitty -d $HOME/.dotfiles; exec kitty -d $HOME/.dotfiles fish -c lazygit; workspace 8; layout tabbed; exec qutebrowser mail.ewen.works mail.google.com; workspace 9; exec spotifyd; exec qutebrowser open.spotify.com; workspace 10; layout tabbed; exec kitty fish -c tiny; exec kitty fish -c gomuks; exec discord; workspace 1; exec qutebrowser https://github.com/issues?q=is%3Aopen+is%3Aissue+author%3Aewen-lbh+archived%3Afalse+-repo%3Aewen-lbh%2Fgh-api-playground'
