--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -19,8 +19,8 @@ modules-right = network audio backlight battery
 inherit = section/bar-base
 bottom = true
 ; tray-position = right
-modules-right = spotify
-modules-left = consumption stamina
+modules-right = consumption stamina
+modules-left = spotify
 
 [module/temp]
 type = internal/temperature
@@ -29,9 +29,9 @@ label = %temperature-c%
 
 [module/spotify]
 type = custom/script
-interval = 2
+interval = 1
 exec-if = playerctl status
-exec = test -f $HOME/.cache/currently_playing.txt && cat $HOME/.cache/currently_playing.txt || playerctl -f '{{artist}}: {{title}}' metadata
+exec = spt pb -f '%f %a: %t' | sed s//♥/ | sed 's/咽 /⇄/' | sed 's/凌 /↷/' | sed 's/綾 /¹↷/' | sed 's/, / × /g'
 format = <label>
 click-left = spotifyd
 
