--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -30,8 +30,8 @@ label = %temperature-c%
 [module/spotify]
 type = custom/script
 interval = 1
-exec-if = playerctl status
 exec = spt pb -f '%f %a: %t' | sed s//♥/ | sed 's/咽 /⇄/' | sed 's/凌 /↷/' | sed 's/綾 /¹↷/' | sed 's/, / × /g'
+exec-if = spt pb
 format = <label>
 click-left = spotifyd
 
