--- a/.config/i3/config
+++ b/.config/i3/config
@@ -46,8 +46,6 @@ floating_modifier $mod
 bindsym $mod+Return exec kitty
 # start a browser
 bindsym $mod+b exec qutebrowser
-# start the IDE
-bindsym $mod+c exec code-insiders
 
 # smart_gaps on
 gaps inner 35
@@ -67,10 +65,10 @@ bindsym $mod+d exec "rofi -show drun -matching fuzzy -modi window,drun,ssh,file-
 # bindsym $mod+d exec --no-startup-id i3-dmenu-desktop
 
 # change focus
-# bindsym $mod+h focus left
-# bindsym $mod+j focus down
-# bindsym $mod+k focus up
-# bindsym $mod+l focus right
+bindsym $mod+h focus left
+bindsym $mod+j focus down
+bindsym $mod+k focus up
+bindsym $mod+l focus right
 
 # alternatively, you can use the cursor keys:
 bindsym $mod+Left focus left
@@ -79,10 +77,10 @@ bindsym $mod+Up focus up
 bindsym $mod+Right focus right
 
 # move focused window
-bindsym $mod+Shift+j move left
-bindsym $mod+Shift+k move down
-# bindsym $mod+Shift+l move up
-bindsym $mod+Shift+semicolon move right
+bindsym $mod+Shift+h move left
+bindsym $mod+Shift+j move down
+bindsym $mod+Shift+k move up
+bindsym $mod+Shift+l move right
 
 # alternatively, you can use the cursor keys:
 bindsym $mod+Shift+Left move left
@@ -92,7 +90,7 @@ bindsym $mod+Shift+Right move right
 
 
 # split in horizontal orientation
-bindsym $mod+h split h
+bindsym $mod+c split h
 
 # split in vertical orientation
 bindsym $mod+v split v
@@ -111,7 +109,7 @@ bindsym $mod+Shift+space floating toggle
 # TODO: $mod+space : switch keyboard layout
 
 # lock
-bindsym $mod+l exec betterlockscreen --lock
+bindsym $mod+Caps_Lock exec betterlockscreen --lock
 exec --no-startup-id test `hostname` = "voyager" && betterlockscreen --lock 
 
 # change focus between tiling / floating windows
@@ -201,10 +199,10 @@ mode "resize" {
         # Pressing right will grow the window’s width.
         # Pressing up will shrink the window’s height.
         # Pressing down will grow the window’s height.
-        bindsym j resize shrink width 10 px or 10 ppt
+        bindsym h resize shrink width 10 px or 10 ppt
         bindsym k resize grow height 10 px or 10 ppt
-        bindsym l resize shrink height 10 px or 10 ppt
-        bindsym semicolon resize grow width 10 px or 10 ppt
+        bindsym j resize shrink height 10 px or 10 ppt
+        bindsym l resize grow width 10 px or 10 ppt
 
         # same bindings, but for the arrow keys
         bindsym Left resize shrink width 10 px or 10 ppt
@@ -252,9 +250,6 @@ bindsym XF86MonBrightnessDown exec xbacklight -5
 
 # Toggle touchpad
 bindsym XF86TouchpadToggle exec /home/ewen/.config/i3/toggle_touchpad.fish
-
-# Save & load layouts
-bindsym $mod+Shift+l exec i3-layout-manager
 
 # Media keybinds
 bindsym $mod+ctrl+Right exec playerctl  next || spt pb --next
