--- a/.config/picom.conf
+++ b/.config/picom.conf
@@ -31,14 +31,15 @@ fade-delta = 5.0;
 vsync = true
 
 # Shadows
-shadow = false;
+shadow = true;
 # no-dnd-shadow = true; # DEPRECATED
 # no-dock-shadow = true; # DEPRECATED
-# clear-shadow = true; # ON BY DEFAULT NOW (DEPRECATED)
-shadow-radius = 6;
-shadow-offset-x = -2;
-shadow-offset-y = -2;
-shadow-opacity = 0.2;
+# clear-shadow = false; # ON BY DEFAULT NOW (DEPRECATED)
+shadow-radius = 20;
+shadow-offset-x = -7;
+shadow-offset-y = 7;
+shadow-opacity = 0.4;
+shadow-exclude = [ "!focused", "class_g = 'rofi'" ];
 
 wintypes:
 {
