polybar: hide spotify when stopped

--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -30,6 +30,7 @@ label = %temperature-c%
 [module/spotify]
 type = custom/script
 interval = 1
+exec-if = test $(playerctl status) != Stopped
 exec = cat ~/.config/polybar/spotify-metadata-receiver-output.txt
 format = <label>
 click-left = spotifyd
