polybar: update exec-if condition for spotify

--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -30,10 +30,9 @@ label = %temperature-c%
 [module/spotify]
 type = custom/script
 interval = 1
-# exec-if = test $(playerctl status) != Stopped
-exec = cat ~/.config/polybar/spotify-metadata-receiver-output.txt
+exec-if = not rg 'undefined — undefined$' .config/polybar/spotify-metadata.txt
+exec = cat ~/.config/polybar/spotify-metadata.txt
 format = <label>
-click-left = spotifyd
 
 [module/play-prev]
 type = custom/script
