--- a/.config/i3/config
+++ b/.config/i3/config
@@ -283,3 +283,7 @@ for_window [instance="origin.exe"] floating enable
 
 # Startup applications
 # exec --no-startup-id i3-msg 'workspace 2; exec kitty qutebrowser; workspace 7; exec kitty -d $HOME/.dotfiles; exec kitty -d $HOME/.dotfiles fish -c lazygit; workspace 8; layout tabbed; exec qutebrowser mail.ewen.works mail.google.com; workspace 9; exec spotifyd; exec qutebrowser open.spotify.com; workspace 10; layout tabbed; exec kitty fish -c tiny; exec kitty fish -c gomuks; exec discord; workspace 1; exec qutebrowser https://github.com/issues?q=is%3Aopen+is%3Aissue+author%3Aewen-lbh+archived%3Afalse+-repo%3Aewen-lbh%2Fgh-api-playground'
+
+# i3expo-ng (Overview of all workspaces)
+exec_always "i3expod.py -f -w ~/.config/wallpaper.png"
+bindsym $mod+Tab exec --no-startup-id ~/.config/i3/open_i3expo
