polybar: spotify: reduce interval, disable exec-if

--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -29,8 +29,8 @@ label = %temperature-c%
 
 [module/spotify]
 type = custom/script
-interval = 1
-exec-if = not rg 'undefined — undefined$' .config/polybar/spotify-metadata.txt
+interval = 0.25
+# exec-if = not rg 'undefined — undefined$' .config/polybar/spotify-metadata.txt
 exec = cat ~/.config/polybar/spotify-metadata.txt
 format = <label>
 
