--- a/.config/i3/config
+++ b/.config/i3/config
@@ -58,7 +58,7 @@ for_window [class="^.*"] border pixel 0
 bindsym $mod+Shift+q kill
 
 # start dmenu (a program launcher)
-bindsym $mod+d exec "rofi -show drun -matching fuzzy -modi window,drun,ssh,file-browser fb:~/.config/rofi/rofi-fb"
+bindsym $mod+d exec "rofi -show drun -matching fuzzy -drun-match-fields name,generic -modi window,drun,ssh,file-browser fb:~/.config/rofi/rofi-fb"
 # There also is the (new) i3-dmenu-desktop which only displays applications
 # shipping a .desktop file. It is a wrapper around dmenu, so you need that
 # installed.
