--- a/.config/i3/config
+++ b/.config/i3/config
@@ -124,7 +124,7 @@ bindsym $mod+a focus parent
 
 # take screenhots
 bindsym --release Shift+Print exec scrot --select --freeze -e 'mv $f /tmp/screenshot.png' && cp /tmp/screenshot.png ~/screenshots/$(date --iso-8601=seconds).png && xclip -selection clipboard -target image/png -i /tmp/screenshot.png
-bindsym --release Print exec scrot -e 'mv $f ~/screenshots'
+bindsym --release Print exec scrot -e 'mv $f ~/screenshots/$(date --iso-8601=seconds).png'
 
 # workspace_auto_back_and_forth true
 
