polybar: remove (vlc) indicator

--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -31,7 +31,7 @@ label = %temperature-c%
 type = custom/script
 interval = 0.25
 # exec-if = not rg 'undefined — undefined$' .config/polybar/spotify-metadata.txt
-exec = [[ $(playerctl --player=vlc status 2>&1) = "Playing" ]] && playerctl metadata --format="(vlc) {{artist}} — {{title}}" || cat ~/.config/polybar/spotify-metadata.txt
+exec = [[ $(playerctl --player=vlc status 2>&1) = "Playing" ]] && playerctl metadata --format="{{artist}} — {{title}}" || cat ~/.config/polybar/spotify-metadata.txt
 format = <label>
 
 [module/play-prev]
