--- a/.config/picom.conf
+++ b/.config/picom.conf
@@ -1,6 +1,7 @@
 opacity-rule = [
   "75:class_g = 'discord'",
   "80:class_g = 'kitty'",
+  "80:class_g = 'Thunar'",
   "85:class_g = 'VSCodium'",
   "85:class_g = 'Code - Insiders'",
   "85:class_g = 'Spotify'",
