kitty: use cartograph cf @ 12pt

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -36,8 +36,8 @@ color14 #5ebae6
 color7  #eeffff
 color15 #eeffff
 
-font_family scientifica
-font_size 14
+font_family Cartograph CF
+font_size 12
 allow_remote_control yes
 cursor_shape block
 url_style double
