--- a/.config/i3/config
+++ b/.config/i3/config
@@ -57,7 +57,7 @@ for_window [class="^.*"] border pixel 0
 # kill focused window
 bindsym $mod+Shift+q kill
 
-# start dmenu (a program launcher)
+# program launcher
 bindsym $mod+d exec "rofi -show drun -matching fuzzy -drun-match-fields name,generic -modi window,drun,ssh,file-browser fb:~/.config/rofi/rofi-fb"
 # There also is the (new) i3-dmenu-desktop which only displays applications
 # shipping a .desktop file. It is a wrapper around dmenu, so you need that
@@ -111,6 +111,8 @@ bindsym $mod+Shift+space floating toggle
 # lock
 # also press caps_lock w/ xdotool so that the caps lock state does not change
 bindsym $mod+Caps_Lock exec xdotool key Caps_Lock && betterlockscreen --lock 
+
+# lock on startup for laptop (no need for desktop)
 exec --no-startup-id test `hostname` = "voyager" && betterlockscreen --lock 
 
 # change focus between tiling / floating windows
