polybar: add cpu+ram

--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -19,13 +19,13 @@ modules-right = network audio backlight battery
 inherit = section/bar-base
 bottom = true
 ; tray-position = right
-modules-right = consumption stamina
+modules-right = cpu ram temperature consumption stamina
 modules-left = spotify
 
-[module/temp]
+[module/temperature]
 type = internal/temperature
 interval = 5
-label = %temperature-c%
+label = temp %temperature-c%
 
 [module/spotify]
 type = custom/script
@@ -49,10 +49,10 @@ exec = "echo '>>>>'"
 [module/cpu]
 type = internal/cpu
 interval = 5
-label = CPU %percentage%%
+label = cpu %percentage%%
 
-[module/mem]
-label = RAM %percentage_used%%
+[module/ram]
+label = ram %gb_free% available
 type = internal/memory
 
 [module/i3]
