polybar: show visible but not focused workspace in ()

--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -82,7 +82,7 @@ ws-icon-9  = 10;disc
 ; ws-icon-9  = 10;十
 ; ws-icon-default = 〇
 
-label-visible = " %icon%  "
+label-visible = "(%icon%) "
 label-focused = "[%icon%] "
 label-unfocused = " %icon%  "
 label-urgent = " %icon%  "
