lazygit: add 'g' key to commit with gitmoji

--- a/.config/lazygit/config.yml
+++ b/.config/lazygit/config.yml
@@ -2,3 +2,8 @@ gui:
   theme:
     lightTheme: false
   showFileTree: true
+customCommands:
+  - key: g
+    context: files
+    command: gitmoji -c
+    subprocess: true
