--- a/.config/lazygit/config.yml
+++ b/.config/lazygit/config.yml
@@ -2,6 +2,10 @@ gui:
   theme:
     lightTheme: false
   showFileTree: true
+git:
+  paging:
+    colorArg: always
+    pager: delta --paging=never
 customCommands:
   - key: g
     context: files
