--- a/.gitconfig
+++ b/.gitconfig
@@ -14,4 +14,6 @@
 [delta]
 	line-numbers = true
 	syntax-theme = OneHalfLight
+[difftool "diffpdf"]
+	cmd = diff-pdf --view \"$LOCAL\" \"$REMOTE\"
 
