qute: add gkp biding (which does the reverse of pkg (i.e. pkggpk does nothing))

--- a/.config/qutebrowser/autoconfig.yml
+++ b/.config/qutebrowser/autoconfig.yml
@@ -13,6 +13,7 @@ settings:
         ',m': spawn mpv {url}
         ;c: hint links right-click
         gr: greasemonkey-reload
+        gkp: open https://{url:path}
         pkg: open pkg.go.dev/{url:host}{url:path}
   content.notifications.enabled:
     https://www.reddit.com: false
