i3: open cool-retro-term with ❖⇧↲

--- a/.config/i3/config
+++ b/.config/i3/config
@@ -44,6 +44,8 @@ floating_modifier $mod
 
 # start a terminal
 bindsym $mod+Return exec kitty
+# the cooler ~~daniel~~ terminal
+bindsym $mod+Shift+Return exec cool-retro-term
 # start a browser
 bindsym $mod+b exec --no-startup-id qutebrowser
 
