polybar: add pomodoro module

--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -20,12 +20,21 @@ inherit = section/bar-base
 bottom = true
 ; tray-position = right
 modules-right = cpu ram temperature consumption stamina
+modules-center = pomodoro
 modules-left = spotify
 
 [module/temperature]
 type = internal/temperature
 interval = 5
 label = temp %temperature-c%
+
+[module/pomodoro]
+type = custom/script
+interval = 0.25
+exec = cat $HOME/.cache/pomodoro-state.txt
+exec-if = pgrep --full pomodoro
+click-right = kill $(pgrep --full pomodoro); rm $HOME/.cache/pomodoro-state.txt
+format = pomodoro <label>
 
 [module/spotify]
 type = custom/script
