polybar: change location of pomodoro

--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -19,9 +19,9 @@ modules-right = network audio backlight battery
 inherit = section/bar-base
 bottom = true
 ; tray-position = right
-modules-right = cpu ram temperature consumption stamina
-modules-center = pomodoro
-modules-left = spotify
+modules-right = cpu ram consumption stamina
+; modules-center = pomodoro
+modules-left = pomodoro spotify 
 
 [module/temperature]
 type = internal/temperature
