polybar: pomodoro: only show if both a process is running & the state file exists
so that if i'm e.g. editing a file w/ pomodoro in the name, it doesn't try to cat out the state file

--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -32,7 +32,7 @@ label = temp %temperature-c%
 type = custom/script
 interval = 0.25
 exec = cat $HOME/.cache/pomodoro-state.txt
-exec-if = pgrep --full pomodoro
+exec-if = test -f $HOME/.cache/pomodoro-state.txt && pgrep --full pomodoro
 click-right = kill $(pgrep --full pomodoro); rm $HOME/.cache/pomodoro-state.txt
 format = pomodoro <label>
 
