--- a/.config/lazygit/config.yml
+++ b/.config/lazygit/config.yml
@@ -12,3 +12,17 @@ customCommands:
     command: gitmoji -c
     description: commit with gitmoji
     subprocess: true
+  - key: I
+    context: files
+    command: gh issue list
+    description: see open github issues
+    subprocess: true
+  - key: 'N'
+    description: create annotated tag
+    command: git tag -a {{index .PromptResponses 0}} -m "{{index .PromptResponses 1}}"
+    context: tags
+    prompts:
+      - type: input
+        title: Annotated tag name
+      - type: input
+        title: Annotated tag message
