--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -20,8 +20,16 @@ inherit = section/bar-base
 bottom = true
 ; tray-position = right
 modules-right = cpu ram consumption stamina
-; modules-center = pomodoro
+modules-center = todo
 modules-left = pomodoro spotify 
+
+[module/todo]
+type = custom/script
+interval = 0.5
+format = todo <label>
+exec = head -1 $HOME/todo
+exec-if = test -f $HOME/todo
+click-right = head -1 $HOME/todo >> $HOME/done && tail -n +2 $HOME/todo | sponge $HOME/todo
 
 [module/temperature]
 type = internal/temperature
