--- a/.config/picom.conf
+++ b/.config/picom.conf
@@ -3,7 +3,7 @@ opacity-rule = [
   "80:class_g = 'kitty'",
   "80:class_g = 'Thunar'",
   "85:class_g = 'VSCodium'",
-  "85:class_g = 'Code - Insiders'",
+  "85:class_g = 'Code'",
   "85:class_g = 'Spotify'",
   "90:class_g = 'firefox'",
   "85:class_g = 'Brave-browser'",
