polybar: right-click on sound module to open pavucontrol

--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -162,6 +162,8 @@ type = internal/pulseaudio
 format-volume = snd <label-volume>
 format-muted = snd off
 
+click-right = pavucontrol
+
 interval = 5
 
 label-muted   = off
