--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -30,7 +30,7 @@ format = todo <label>
 exec = head -1 $HOME/todo
 exec-if = test -f $HOME/todo
 click-right = head -1 $HOME/todo >> $HOME/done && tail -n +2 $HOME/todo | sponge $HOME/todo
-click-middle = neovide-kbd-fix ~/todo
+click-middle = neovide-kbd-fix --multiGrid ~/todo
 
 [module/temperature]
 type = internal/temperature
