--- a/.config/picom.conf
+++ b/.config/picom.conf
@@ -4,12 +4,11 @@ opacity-rule = [
   "80:class_g = 'neovide-kbd-fix'",
   "80:class_g = 'Thunar'",
   "85:class_g = 'VSCodium'",
-  "85:class_g = 'Code'",
+  "80:class_g = 'Code'",
   "85:class_g = 'Spotify'",
   "90:class_g = 'firefox'",
   "85:class_g = 'Brave-browser'",
   "85:class_g = 'qutebrowser'",
-  "85:class_g = 'Zathura'",
   "85:class_g = 'GitKraken'",
   "100:class_g = 'Polybar'",
 ];
@@ -23,8 +22,7 @@ backend = "glx";
 transparent-clipping = true;
 
 blur-background = true;
-# blur-method = "dual_kawase";
-blur-method = "box";
+blur-method = "dual_kawase";
 blur-strength = 10;
 blur-size = 75;
 
@@ -46,6 +44,9 @@ shadow-exclude = [ "!focused", "class_g = 'rofi'" ];
 wintypes:
 {
   full-shadow = true;
-};
+}
 
-corner-radius = 5;
+corner-radius = 7;
+
+size-transition = false;
+transition-length = 500;
