--- a/.config/i3/config
+++ b/.config/i3/config
@@ -283,6 +283,8 @@ bindsym $mod+Shift+ugrave exec CM_LAUNCHER=rofi clipmenu
 
 # Launch rofi power menu ("power" is used loosesly here, I tend to shove unrelated, misc. stuff here)
 bindsym $mod+x exec $HOME/.config/rofi/powermenu 
+bindsym $mod+g exec $HOME/.config/rofi/work_on
+bindsym $mod+i exec $HOME/.config/rofi/edit_dotfiles
 
 # Origin game launcher
 # see https://github.com/lutris/docs/blob/master/Origin.md#blank-window-with-i3-wm
