--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1,41 +1,47 @@
-window_padding_width 16
-
-foreground #eeffff
-background #2a2838
-
 # Black
-color0 #2a2838  
-color8 #2a2838
+color0 #676E95
+# BrightBlack
+color8 #676E95
 
 # Red
-color1 #e02d60
-color9 #e02d60
+color1 #ff5572
+# BrightRed
+color9 #ff5572
 
 # Green
-color2  #1fdbac
-color10 #1fdbac
+color2 #a9c77d
+# BrightGreen
+color10 #C3E88D
 
 # Yellow
-color3  #f0b82b
-color11 #f0b82b
+color3 #FFCB6B
+# BrightYellow
+color11 #FFCB6B
 
 # Blue
-color4  #7599e6
-color12 #7599e6
+color4 #82AAFF
+# BrightBlue
+color12 #82AAFF
 
 # Magenta
-color5  #8a75e6
-color13 #8a75e6
+color5 #C792EA
+# BrightMagenta
+color13 #C792EA
 
 # Cyan
-color6  #5ebae6
-color14 #5ebae6
-
+color6 #89DDFF
+# BrightCyan
+color14 #89DDFF
 
 # White
-color7  #eeffff
-color15 #eeffff
+color7 #ffffff
+# BrightWhite
+color15 #ffffff
 
+foreground #ffffff
+background #25293A
+
+window_padding_width 16
 font_family Cartograph CF
 font_size 12
 allow_remote_control yes
