--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -27,7 +27,7 @@ modules-left = pomodoro spotify
 type = custom/script
 interval = 0.5
 format = todo <label>
-exec = head -1 $HOME/todo
+exec = echo "($(wc -l ~/todo | cut -d' ' -f1)) $(head -1 ~/todo)"
 exec-if = test -f $HOME/todo
 click-right = head -1 $HOME/todo >> $HOME/done && tail -n +2 $HOME/todo | sponge $HOME/todo
 click-left = neovide-kbd-fix --multiGrid ~/todo
@@ -108,9 +108,10 @@ label-unfocused = " %icon%  "
 label-urgent = " %icon%  "
 
 [module/date]
-type = internal/date
-date = %H:%M
-date-alt = %Y-%m-%dT%H:%M:%S
+type = custom/script
+exec = date +"%H:%M:%S  %Y-%m-%d"
+interval = 1
+click-right = qutebrowser !gcal
 
 [module/title]
 type = internal/xwindow
