vscode: add default formatter rufo for ruby

--- a/.config/Code/User/settings.json
+++ b/.config/Code/User/settings.json
@@ -135,5 +135,8 @@
   "makefileCommandRunner.makefilePath": "${workspaceDir}",
   "makefileCommandRunner.filePathEnv": "",
   "makefileCommandRunner.unitTestCommand": "tests",
-  "ruby.useLanguageServer": true
+  "ruby.useLanguageServer": true,
+  "[ruby]": {
+    "editor.defaultFormatter": "jnbt.vscode-rufo"
+  }
 }
