polybar: add bluetooth (wip) and colorscheme modules

--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -2,9 +2,9 @@
 monitor = ${env:MONITOR:}
 background = #00000000
 foreground = ${env:COLOR_PRIM:#FFF}
-font-1=${env:FONT_1:}
-font-0=${env:FONT_0:}
-height=${env:BAR_HEIGHT:}
+font-1 = ${env:FONT_1:}
+font-0 = ${env:FONT_0:}
+height = ${env:BAR_HEIGHT:}
 padding = 2
 module-margin = 2
 
@@ -12,7 +12,7 @@ module-margin = 2
 inherit = section/bar-base
 modules-left = date
 modules-center = i3
-modules-right = network audio backlight battery
+modules-right = network bluetooth audio colorscheme backlight battery
 ; tray-position = left
 
 [bar/bottom]
@@ -22,6 +22,19 @@ bottom = true
 modules-right = cpu ram consumption stamina
 modules-center = todo
 modules-left = pomodoro spotify 
+
+[module/bluetooth]
+type=custom/script
+format=blu <label>
+exec= bluetoothctl devices | head -1 | sd 'Device (\w\w:){5}\w\w ' '' || echo none
+click-left = bluetoothctl connect 5C:EB:68:4A:3E:CA
+click-right= bluetoothctl disconnect
+
+[module/colorscheme]
+type = custom/script
+interval = 1
+format = thm <label>
+exec = cat $HOME/.config/current_color_scheme
 
 [module/todo]
 type = custom/script
