picom: disable fading

--- a/.config/picom.conf
+++ b/.config/picom.conf
@@ -26,8 +26,8 @@ blur-method = "dual_kawase";
 blur-strength = 10;
 blur-size = 75;
 
-fading = true;
-fade-delta = 5.0;
+# fading = true;
+# fade-delta = 5.0;
 vsync = true
 
 # Shadows
