polybar: spotify: add mpv to fallback (aside vlc)

--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -63,7 +63,7 @@ format = pomodoro <label>
 type = custom/script
 interval = 0.25
 # exec-if = not rg 'undefined — undefined$' .config/polybar/spotify-metadata.txt
-exec = [[ $(playerctl --player=vlc status 2>&1) = "Playing" ]] && playerctl metadata --format="{{artist}} — {{title}}" || cat ~/.config/polybar/spotify-metadata.txt
+exec = [[ $(playerctl --player=vlc,mpv status 2>&1) = "Playing" ]] && playerctl metadata --format="{{artist}} — {{title}}" || cat ~/.config/polybar/spotify-metadata.txt
 click-right = echo "" > ~/.config/polybar/spotify-metadata.txt
 format = <label>
 
